# printerlynx_core_backend

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml  rust-build-test.yml
docs/: api_account.md  api_agents.md  api_authentication.md  api_printfiles.md  api_specification.md  websockets_specification.md
files/: README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_table_account.rs  m20230916_170023_create_table_printfile.rs  m20231007_204738_alter_printfile_add_size.rs  m20231124_134301_create_table_agent.rs
src/: lib.rs  main.rs
src/common/: app_error.rs  jwt_token.rs  mapper.rs  mod.rs
src/controllers/: account_controller.rs  agent_controller.rs  auth_controller.rs  mod.rs  printfile_controller.rs  service_controller.rs  user_controller.rs
src/controllers/websockets/: agent_websocket.rs  user_websocket.rs
src/infra/: database.rs  filestorage.rs  filesystem.rs  message_broker.rs  mod.rs  serial.rs  websockets.rs
src/infra/messages/: websocket_message.rs
src/infra/strategies/: file_storage_strategy.rs  local_file_strategy.rs  mod.rs  s3_file_strategy.rs
src/infra/websockets/: agent_websocket.rs  user_websocket.rs
src/middlewares/: auth_middleware.rs
src/models/: account_model.rs  agent_model.rs  mod.rs  printfile_model.rs  view_model.rs
src/router/: api_v1.rs
src/services/: account_service.rs  agent_service.rs  auth_service.rs  filestorage_service.rs  mod.rs  printfile_service.rs  user_service.rs
(+8 files in other folders)
