[package]
name = "printerlynx_core_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers", "ws", "multipart"] }
axum-macros = "0.3.8"
chrono = "0.4.30"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
password-auth = "1.0.0"
rust-s3 = "0.33.0"
sea-query = { version = "0.30.1", features = ["backend-mysql", "with-uuid"] }
serde = { version = "1.0.188", features = ["derive"] }
sha2 = "0.10.7"
sqlx = { version = "0.7.1", features = ["any", "migrate", "mysql", "runtime-tokio", "sqlx-mysql", "uuid"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors", "limit", "trace"] }
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter", "default"]}
uuid = { version = "1.4.1", features = ["serde", "v4"] }
futures-util = "0.3.28"
serde_json = "1.0.105"
